# exiv2

./: .clang-format  CMakeLists.txt  CMakePresets.json  conanfile.py  meson.build
.github/workflows/: codeql-analysis.yml  on_PR_linux_matrix.yml  on_PR_linux_staticAnalysis.yml  on_PR_mac_special_builds.yml  on_PR_meson.yaml  on_PR_windows_matrix.yml  on_push_BasicWinLinMac.yml  on_push_clang_format.yml
app/: actions.cpp  exiv2.cpp
ci/: install_dependencies.sh
cmake/: compilerFlags.cmake  config.h.cmake  generateConfigFile.cmake
include/exiv2/: basicio.hpp  bmffimage.hpp  config.h  convert.hpp  datasets.hpp  error.hpp  exif.hpp  exiv2.hpp  image.hpp  preview.hpp  slice.hpp  types.hpp  value.hpp
samples/: geotag.cpp
src/: CMakeLists.txt  basicio.cpp  bmffimage.cpp  bmpimage.cpp  canonmn_int.cpp  convert.cpp  cr2image.cpp  crwimage_int.cpp  datasets.cpp  epsimage.cpp  error.cpp  exif.cpp  fujimn_int.cpp  futils.cpp  http.cpp  image.cpp  image_int.cpp  image_int.hpp  iptc.cpp  jp2image.cpp  jpgimage.cpp  makernote_int.cpp  makernote_int.hpp  matroskavideo.cpp  minoltamn_int.cpp  nikonmn_int.cpp  olympusmn_int.cpp  orfimage.cpp  panasonicmn_int.cpp  pentaxmn_int.cpp  pgfimage.cpp  pngimage.cpp  preview.cpp  properties.cpp  psdimage.cpp  quicktimevideo.cpp  rafimage.cpp  sigmamn_int.cpp  sonymn_int.cpp  tags.cpp  (+12 more)
subprojects/: gtest.wrap
subprojects/packagefiles/gtest/googlemock/: meson.build
tests/: meson.build
tests/lens_tests/: utils.py
unitTests/: test_slice.cpp
